feat: add voyager for graphql

--- a/weiran-graphql/pom.xml
+++ b/weiran-graphql/pom.xml
@@ -25,7 +25,12 @@
         <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphql-spring-boot-starter</artifactId>
-            <version>5.0.2</version>
+            <version>${graphql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.graphql-java-kickstart</groupId>
+            <artifactId>voyager-spring-boot-starter</artifactId>
+            <version>11.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.graphql-java</groupId>
@@ -35,13 +40,14 @@
         <dependency>
             <groupId>com.graphql-java</groupId>
             <artifactId>graphiql-spring-boot-starter</artifactId>
-            <version>5.0.2</version>
+            <version>${graphql.version}</version>
         </dependency>
     </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <graphql.version>5.0.2</graphql.version>
     </properties>
 
 </project>
