--- a/weiran-graphql/pom.xml
+++ b/weiran-graphql/pom.xml
@@ -25,38 +25,42 @@
         <dependency>
             <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphql-spring-boot-starter</artifactId>
-            <version>${graphql.spring.starter.version}</version>
+            <version>${graphql.version}</version>
         </dependency>
         <dependency>
             <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>graphiql-spring-boot-starter</artifactId>
-            <version>${graphql.spring.starter.version}</version>
+            <version>${graphql.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>voyager-spring-boot-starter</artifactId>
-            <version>${graphql.spring.starter.version}</version>
+            <version>${graphql.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>altair-spring-boot-starter</artifactId>
-            <version>${graphql.spring.starter.version}</version>
+            <version>${graphql.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.graphql-java-kickstart</groupId>
             <artifactId>playground-spring-boot-starter</artifactId>
-            <version>${graphql.spring.starter.version}</version>
+            <version>${graphql.version}</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
         </dependency>
     </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <graphql.spring.starter.version>11.1.0</graphql.spring.starter.version>
+        <graphql.version>11.1.0</graphql.version>
     </properties>
 
 </project>
